App: fixed remaining errors and typed content structures

--- a/app/App.css
+++ b/app/App.css
@@ -88,6 +88,11 @@ a.mini {
   padding: 0;
 }
 
+.invisible {
+  opacity: 0;
+  pointer-events: none;
+}
+
 #toolbar {
   position: relative;
   justify-content: center;
