--- a/app/home/introduction/Introduction.css
+++ b/app/home/introduction/Introduction.css
@@ -153,7 +153,7 @@
     font-size: 20px;
   }
 
-  .paper.expand:first-child {
+  .paper.expand.mini {
     height: 66.666%;
     width: 66.666%;
   }
